force-app/main/default/objects/Restaurant__c/fields/Accepts_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Reservations__c</fullName>
    <label>Accepts Reservations</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>