force-app/main/default/objects/Restaurant__c/fields/Accepts_Walkins__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Walkins__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether walk-ins are accepted</description>
    <label>Accepts Walk-ins</label>
    <type>Checkbox</type>
</CustomField>