force-app/main/default/objects/Restaurant__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Street, City, State, Postal code, Country or formatted address</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>