force-app/main/default/objects/Restaurant__c/fields/Avg_Rating__c.field-meta.xml
<CustomField>
    <fullName>Avg_Rating__c</fullName>
    <description>Average diner rating</description>
    <label>Avg Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>