force-app/main/default/objects/Restaurant__c/fields/Bar_Available__c.field-meta.xml
<CustomField>
    <fullName>Bar_Available__c</fullName>
    <label>Bar Available</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>