force-app/main/default/objects/Restaurant__c/fields/Cancellation_Window_Hours__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Window_Hours__c</fullName>
    <description>Hours before booking when cancellation is allowed without fee</description>
    <label>Cancellation Window (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>