force-app/main/default/objects/Restaurant__c/fields/City_Test__c.field-meta.xml
<CustomField>
    <!-- force deploy -->
    <fullName>City_Test__c</fullName>
    <label>City</label>
    <type>Text</type>
    <length>255</length>
</CustomField>