force-app/main/default/objects/Restaurant__c/fields/Dietary_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Accommodations__c</fullName>
    <description>Dietary accommodations offered</description>
    <label>Dietary Accommodations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>Dairy-Free</fullName>
            </value>
            <value>
                <fullName>Nut-Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>