force-app/main/default/objects/Restaurant__c/fields/Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>Dress_Code__c</fullName>
    <label>Dress Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>