force-app/main/default/objects/Restaurant__c/fields/Happy_Hour__c.field-meta.xml
<CustomField>
    <fullName>Happy_Hour__c</fullName>
    <label>Happy Hour</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>