force-app/main/default/objects/Restaurant__c/fields/Hours_Friday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Friday__c</fullName>
    <label>Hours Friday</label>
    <type>Text</type>
    <length>255</length>
</CustomField>