force-app/main/default/objects/Restaurant__c/fields/Hours_Monday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Monday__c</fullName>
    <label>Hours Monday</label>
    <type>Text</type>
    <length>255</length>
</CustomField>