force-app/main/default/objects/Restaurant__c/fields/Hours_Saturday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Saturday__c</fullName>
    <label>Hours Saturday</label>
    <type>Text</type>
    <length>255</length>
</CustomField>