force-app/main/default/objects/Restaurant__c/fields/Hours_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Sunday__c</fullName>
    <label>Hours Sunday</label>
    <type>Text</type>
    <length>255</length>
</CustomField>