force-app/main/default/objects/Restaurant__c/fields/Hours_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Thursday__c</fullName>
    <label>Hours Thursday</label>
    <type>Text</type>
    <length>255</length>
</CustomField>