force-app/main/default/objects/Restaurant__c/fields/Hours_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Tuesday__c</fullName>
    <label>Hours Tuesday</label>
    <type>Text</type>
    <length>255</length>
</CustomField>