force-app/main/default/objects/Restaurant__c/fields/Hours_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Wednesday__c</fullName>
    <label>Hours Wednesday</label>
    <type>Text</type>
    <length>255</length>
</CustomField>