force-app/main/default/objects/Restaurant__c/fields/Kids_Menu__c.field-meta.xml
<CustomField>
    <fullName>Kids_Menu__c</fullName>
    <label>Kids Menu</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>