force-app/main/default/objects/Restaurant__c/fields/Live_Music__c.field-meta.xml
<CustomField>
    <fullName>Live_Music__c</fullName>
    <label>Live Music</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>