force-app/main/default/objects/Restaurant__c/fields/Max_Private_Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Private_Room_Capacity__c</fullName>
    <label>Max Private Room Capacity</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>