force-app/main/default/objects/Restaurant__c/fields/Menu_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Menu_Highlights__c</fullName>
    <label>Menu Highlights</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>