force-app/main/default/objects/Restaurant__c/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <description>Public menu URL</description>
    <label>Menu URL</label>
    <type>Url</type>
</CustomField>