force-app/main/default/objects/Restaurant__c/fields/Outdoor_Seating__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Seating__c</fullName>
    <label>Outdoor Seating</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>