force-app/main/default/objects/Restaurant__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary contact phone</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>