force-app/main/default/objects/Restaurant__c/fields/Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Price_Range__c</fullName>
    <description>Relative price range</description>
    <label>Price Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>$$</fullName>
            </value>
            <value>
                <fullName>$$$</fullName>
            </value>
            <value>
                <fullName>$$$$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>