force-app/main/default/objects/Restaurant__c/fields/Private_Dining_Available__c.field-meta.xml
<CustomField>
    <fullName>Private_Dining_Available__c</fullName>
    <label>Private Dining Available</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>