force-app/main/default/objects/Restaurant__c/fields/Reservation_Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Deposit_Required__c</fullName>
    <label>Reservation Deposit Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>