force-app/main/default/objects/Restaurant__c/fields/Reservation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Policy__c</fullName>
    <description>Reservation policy text</description>
    <label>Reservation Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>