force-app/main/default/objects/Restaurant__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <type>Text</type>
    <length>255</length>
</CustomField>